# ndc-postgres

./: .envrc.example  .gitignore  .prettierignore  Cargo.toml  ConfigServer.Dockerfile  Dockerfile  LICENSE.txt  changelog.md  columns.sql  constraints.sql  docker-compose.yaml  flake.nix  justfile  multiple-key-constraints.sql  readme.md  repro.md  rust-toolchain.toml  test.sql
crates/cli/: Cargo.toml  build.rs  readme.md
crates/cli/src/: lib.rs  main.rs  metadata.rs  native_operations.rs
crates/cli/tests/: initialize_tests.rs  update_tests.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/snapshots/: initialize_tests__initialize_directory_with_metadata.snap  initialize_tests__initialize_directory_with_metadata_and_release_version.snap  initialize_tests__initialize_version_is_unchanged.snap
crates/configuration/: Cargo.toml
crates/configuration/src/: configuration.rs  connect.rs  custom_trait_implementations.rs  environment.rs  error.rs  lib.rs  metrics.rs  tests.rs  version1.rs  version2.rs  version3.rs  version3.sql
crates/configuration/src/values/: comparison.rs  isolation_level.rs  mod.rs  pool_settings.rs  redacted.rs  secret.rs  uri.rs
crates/configuration/src/version3/: comparison.rs  connection_settings.rs  mod.rs  options.rs  tests.rs  version3.sql
crates/configuration/src/version3/metadata/: database.rs  mod.rs  native_queries.rs
crates/configuration/src/version3/snapshots/: ndc_postgres_configuration__version3__tests__get_configuration_schema.snap  ndc_postgres_configuration__version3__tests__postgres_current_only_configure_initial_configuration_is_unchanged.snap
crates/configuration/src/version4/: comparison.rs  introspection.sql  mod.rs  native_operations.rs  options.rs  tests.rs  to_runtime_configuration.rs  upgrade_from_v3.rs
crates/configuration/src/version4/metadata/: database.rs  mutations.rs  native_queries.rs
crates/configuration/src/version4/snapshots/: ndc_postgres_configuration__version4__tests__get_configuration_schema.snap  ndc_postgres_configuration__version4__tests__postgres_current_only_configure_initial_configuration_is_unchanged.snap
crates/configuration/src/version5/: comparison.rs  connection_settings.rs  introspection.sql  mod.rs  native_operations.rs  options.rs  tests.rs  to_runtime_configuration.rs  upgrade_from_v4.rs
crates/configuration/src/version5/metadata/: database.rs  mod.rs  mutations.rs  native_operations.rs  native_queries.rs
crates/configuration/src/version5/snapshots/: ndc_postgres_configuration__version4__tests__get_configuration_schema.snap  (+1 more)
crates/connectors/ndc-citus/: Cargo.toml
crates/connectors/ndc-citus/ndc-test-snapshots/: schema
crates/connectors/ndc-citus/src/: connector.rs  lib.rs
crates/connectors/ndc-citus/tests/: configuration_tests.rs  explain_tests.rs  ndc_tests.rs  query_tests.rs  schema_tests.rs
crates/connectors/ndc-cockroach/: Cargo.toml
crates/connectors/ndc-cockroach/ndc-test-snapshots/: capabilities  schema
crates/connectors/ndc-cockroach/src/: configuration.sql  connector.rs  lib.rs
crates/connectors/ndc-cockroach/tests/: configuration_tests.rs  explain_tests.rs  ndc_tests.rs  query_tests.rs
crates/connectors/ndc-postgres/: Cargo.toml
crates/connectors/ndc-postgres/ndc-test-snapshots/: schema
crates/connectors/ndc-postgres/src/: capabilities.rs  configuration.rs  configuration.sql  configuration_mapping.rs  connector.rs  convert.rs  explain.rs  health.rs  introspection-notes.md  lib.rs  mutation.rs  query.rs  record.rs  schema.rs  state.rs
crates/connectors/ndc-postgres/tests/: capabilities_tests.rs  configuration_tests.rs  mutation_tests.rs  query_tests.rs
crates/documentation/openapi/: Cargo.toml  README.md
crates/documentation/openapi/src/: generator.rs  main.rs
crates/query-engine/execution/: Cargo.toml
crates/query-engine/execution/src/: database.rs  database_info.rs  error.rs  execute.rs  execution.rs  helpers.rs  lib.rs  metrics.rs  mutation.rs  query.rs
crates/query-engine/metadata/: Cargo.toml
crates/query-engine/metadata/src/: lib.rs
crates/query-engine/sql/: Cargo.toml
crates/query-engine/sql/src/: lib.rs
crates/query-engine/translation/: Cargo.toml
crates/query-engine/translation/src/: lib.rs
crates/query-engine/translation/tests/: tests.rs
crates/tests/databases-tests/: Cargo.toml  readme.md
crates/tests/databases-tests/src/: capabilities_tests.rs  deployment_snapshot_tests.rs  lib.rs  ndc_metadata_snapshot_tests.rs
crates/tests/other-db-tests/: Cargo.toml  readme.md
crates/tests/other-db-tests/src/: lib.rs  main.rs
crates/tests/tests-common/: Cargo.toml
crates/tests/tests-common/goldenfiles/: aggregate_count_albums.json  aggregate_count_albums_plus_field.json  aggregate_count_artist_albums.json  aggregate_count_artist_albums_plus_field.json  aggregate_max_enum.json  dup_array_relationship.json  duplicate_filter_results.json  duplicate_filter_results_nested.json  filter_by_nested_field.json  filter_by_nested_field_collection.json  filter_institution_by_nested_field_collection.json  filter_using_scope.json  nested_array_relationships.json  nested_field_relationship.json  nested_object_relationships.json  no_fields.json  order_by_nested_field.json  select_5.json  select_album_object_relationship_to_artist.json  select_array_column.json  select_array_column_nested_types.json  select_array_column_reverse.json  select_array_composite_field.json  select_array_variable.json  select_array_variable_nested_types.json  select_artist_array_relationship_to_album.json  select_by_pk.json  select_by_pk_bad.json  select_composite_column.json  select_composite_column_complex.json  select_composite_column_simple.json  select_composite_variable_complex.json  select_composite_variable_simple.json  select_discoverable_composite_column.json  select_enum.json  select_int_and_string.json  select_nested_column_complex.json  select_nested_column_simple.json  select_order_by_album_artist_name.json  select_order_by_artist_album_count.json  (+44 more)
crates/tests/tests-common/src/: assert.rs  currentdir.rs  lib.rs  request.rs  router.rs  schemas.rs
(+1852 files in other folders)
