[workspace]
resolver = "2"

package.version = "0.7.0"
package.edition = "2021"
package.license = "Apache-2.0"

members = [
    "crates/cli",
    "crates/configuration",
    "crates/connectors/*",
    "crates/documentation/*",
    "crates/query-engine/*",
    "crates/tests/*",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
# disable these for now, but we should probably fix them
similar_names = "allow"
too_many_lines = "allow"

[workspace.dependencies]
ndc-models = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.3" }
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", rev = "359a20b1e92ae85c691d943399cd62f1555177ba" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.3" }
