[workspace]
resolver = "2"

package.version = "2.1.1"
package.edition = "2021"
package.license = "Apache-2.0"

members = [
    "crates/cli",
    "crates/configuration",
    "crates/connectors/*",
    "crates/documentation/*",
    "crates/query-engine/*",
    "crates/tests/*",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
# unstable warnings; we might need to suppress them
redundant_clone = "warn"
# disable these for now, but we should probably fix them
similar_names = "allow"
too_many_lines = "allow"

[workspace.dependencies]
ndc-models = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.2.3" }
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", rev = "e2a1aeb" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.2.3" }

anyhow = "1"
async-trait = "0.1"
axum = "0.6"
axum-test-helper = "0.3"
build-data = "0.2"
bytes = "1"
clap = "4"
env_logger = "0.11"
hyper = "0.14"
indexmap = "2"
insta = "1"
jsonschema = "0.17"
mimalloc = "0.1"
multimap = "0.9"
nonempty = "0.10"
percent-encoding = "2"
prometheus = "0.13"
ref-cast = "1"
reqwest = "0.12"
schemars = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
similar-asserts = "1"
smol_str = "0.1"
sqlformat = "0.2"
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "derive",
] }
tempfile = "3"
test-each = "0.2"
thiserror = "2"
tokio = "1"
tracing = "0.1"
url = "2"
uuid = "1"
