[package]
name = "ndc-citus"
version.workspace = true
edition.workspace = true

default-run = "ndc-citus"

[lib]
name = "ndc_citus"
path = "src/lib.rs"

[[bin]]
name = "ndc-citus"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "599d5ed", package = "ndc-sdk" }
ndc-postgres = { path = "../ndc-postgres" }

async-trait = "0.1.73"
prometheus = "0.13.3"
serde_json = { version = "1.0.107", features = ["raw_value"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"

[dev-dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.6" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.6" }
tests-common = { path = "../../tests/tests-common" }

axum = "0.6.19"
axum-test-helper = "0.3.0"
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["tcp"] }
insta = { version = "1.33.0", features = ["json"] }
reqwest = "0.11.20"
similar-asserts = "1.5.0"
