[package]
name = "ndc-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

default-run = "ndc-postgres"

[lints]
workspace = true

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-postgres-configuration = { path = "../../configuration" }
query-engine-execution = { path = "../../query-engine/execution" }
query-engine-metadata = { path = "../../query-engine/metadata" }
query-engine-sql = { path = "../../query-engine/sql" }
query-engine-translation = { path = "../../query-engine/translation" }

ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "1e6f53b" }

async-trait = "0.1.77"
percent-encoding = "2.3.1"
prometheus = "0.13.3"
serde_json = { version = "1.0.114", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["json", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
