[package]
name = "ndc-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

default-run = "ndc-postgres"

[lints]
workspace = true

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-postgres-configuration = { path = "../../configuration" }
query-engine-execution = { path = "../../query-engine/execution" }
query-engine-metadata = { path = "../../query-engine/metadata" }
query-engine-sql = { path = "../../query-engine/sql" }
query-engine-translation = { path = "../../query-engine/translation" }

ndc-sdk = { workspace = true }

async-trait = { workspace = true }
percent-encoding = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { workspace = true, features = ["json", "postgres", "runtime-tokio-rustls"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
versions = { workspace = true }
