[package]
name = "openapi-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "openapi_generator"
path = "src/lib.rs"

[[bin]]
name = "openapi-generator"
path = "src/main.rs"

[dependencies]
ndc-postgres-configuration = { path = "../../configuration" }
schemars = { version = "0.8.17", features = ["smol_str", "preserve_order"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
