[package]
name = "openapi-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "openapi-generator"
path = "src/main.rs"

[dependencies]
ndc-postgres-configuration = { path = "../../configuration" }
serde_json = { version = "1.0.116", features = ["raw_value"] }
