[package]
name = "openapi-generator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "openapi-generator"
path = "src/main.rs"

[dependencies]
ndc-postgres-configuration = { path = "../../configuration" }
serde_json = { workspace = true, features = ["raw_value"] }
