[package]
name = "query-engine-execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
query-engine-sql = { path = "../sql" }
ndc-sdk = { workspace = true }

bytes = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
sqlformat = { workspace = true }
sqlx = { workspace = true, features = ["json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { workspace = true }
tracing = { workspace = true }
