[package]
name = "query-engine-execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
query-engine-sql = { path = "../sql" }
ndc-models = { workspace = true }

bytes = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
sqlformat = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["json", "postgres", "tls-rustls", "runtime-tokio", "uuid"] }
thiserror = { workspace = true }
tracing = { workspace = true }
