[package]
name = "query-engine-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
schemars = { version = "0.8.16", features = ["smol_str"] }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.115"
