[package]
name = "query-engine-translation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }
ndc-postgres-configuration = { path = "../../../crates/configuration" }

ndc-sdk = { workspace = true }

anyhow = "1.0.86"
indexmap = "2"
multimap = "0.9.1"
serde_json = "1.0.117"
thiserror = "1.0.59"
tokio = "1.37.0"

[dev-dependencies]
insta = { version = "1.38.0", features = ["json"] }
sqlformat = "0.2.3"
