[package]
name = "query-engine-translation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }
ndc-postgres-configuration = { path = "../../../crates/configuration" }

ndc-sdk = { workspace = true }

anyhow = { workspace = true }
indexmap = { workspace = true }
multimap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
sqlformat = { workspace = true }
