[package]
name = "query-engine-translation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }
ndc-postgres-configuration = { path = "../../../crates/configuration" }

ndc-models = { workspace = true }

anyhow = { workspace = true }
indexmap = { workspace = true }
multimap = { workspace = true }
nonempty = { workspace = true }
ref-cast = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
sqlformat = { workspace = true }
