[package]
name = "databases-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# We only run the AWS Aurora tests if this feature is enabled.
# This is handled by the `just test` command, which enables the feature if the
# `AURORA_CONNECTION_URI` environment variable is set.
aurora = []
# We only run the Yugabyte tests if this feature is enabled.
# Note that the Yugabyte Docker image seems not to work on aarch64.
yugabyte = []
# We only run the Cockroach tests if this feature is enabled.
cockroach = []
# We only run the Citus tests if this feature is enabled.
citus = []
# We only run the PostgreSQL tests if this feature is enabled.
postgres = []

[dependencies]
ndc-postgres = { path = "../../connectors/ndc-postgres" }
ndc-postgres-cli = { path = "../../cli" }
ndc-postgres-configuration = { path = "../../configuration" }
tests-common = { path = "../tests-common" }

anyhow = { workspace = true }
axum = { workspace = true }
insta = { workspace = true, features = ["json"] }
similar-asserts = { workspace = true }
tempfile = { workspace = true }
test-each = { workspace = true }
tokio = { workspace = true, features = ["full"] }
