[package]
name = "other-db-tests"
version.workspace = true
edition.workspace = true

[features]
# We only run the AWS Aurora tests if this feature is enabled.
# This is handled by the `just test` command, which enables the feature if the
# `AURORA_CONNECTION_STRING` environment variable is set.
aurora = []
# We only run the Yugabyte tests if this feature is enabled.
# Note that the Yugabyte Docker image seems not to work on aarch64.
yugabyte = []

[dependencies]

tests-common = { path = "../tests-common" }
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "41ae7fc", package = "ndc-sdk" }
ndc-postgres = { path = "../../connectors/ndc-postgres" }

axum = "0.6.19"
env_logger = "0.10.0"
insta = { version = "1.33.0", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
