[package]
name = "other-db-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# We only run the AWS Aurora tests if this feature is enabled.
# This is handled by the `just test` command, which enables the feature if the
# `AURORA_CONNECTION_STRING` environment variable is set.
aurora = []
# We only run the Yugabyte tests if this feature is enabled.
# Note that the Yugabyte Docker image seems not to work on aarch64.
yugabyte = []
# We only run the Cockroach tests if this feature is enabled.
cockroach = []
# We only run the Citus tests if this feature is enabled.
citus = []

[dependencies]

tests-common = { path = "../tests-common" }
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "098b1c2", package = "ndc-sdk" }
ndc-postgres = { path = "../../connectors/ndc-postgres" }
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.8" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.8" }

axum = "0.6.19"
env_logger = "0.10.0"
insta = { version = "1.34.0", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11.22"
hyper = { version = "0.14.27", features = ["tcp"] }
similar-asserts = "1.5.0"
serde_json = { version = "1.0.107", features = ["raw_value"] }
