[package]
name = "other-db-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# We only run the AWS Aurora tests if this feature is enabled.
# This is handled by the `just test` command, which enables the feature if the
# `AURORA_CONNECTION_STRING` environment variable is set.
aurora = []
# We only run the Yugabyte tests if this feature is enabled.
# Note that the Yugabyte Docker image seems not to work on aarch64.
yugabyte = []
# We only run the Cockroach tests if this feature is enabled.
cockroach = []
# We only run the Citus tests if this feature is enabled.
citus = []

[dependencies]
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.8" }
tests-common = { path = "../tests-common" }

axum = "0.6.19"
insta = { version = "1.34.0", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
