[package]
name = "tests-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "tests_common"
path = "src/lib.rs"

[dependencies]
ndc-postgres = { path = "../../connectors/ndc-postgres" }
ndc-postgres-configuration = { path = "../../configuration" }

ndc-sdk = { workspace = true }
ndc-test = { workspace = true }

anyhow = "1.0.83"
axum = "0.6.20"
axum-test-helper = "0.3.0"
env_logger = "0.11.3"
hyper = { version = "0.14.28", features = ["tcp"] }
reqwest = "0.11.27"
serde = "1.0.201"
serde_json = { version = "1.0.117", features = ["raw_value"] }
sqlx = { version = "0.7.4", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
uuid = {version = "1.8.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
