[package]
name = "tests-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "tests_common"
path = "src/lib.rs"

[dependencies]
ndc-postgres = { path = "../../connectors/ndc-postgres" }
ndc-postgres-configuration = { path = "../../configuration" }

ndc-sdk = { workspace = true }
ndc-test = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
axum-test-helper = { workspace = true }
env_logger = { workspace = true }
hyper = { workspace = true, features = ["tcp"] }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { workspace = true, features = [
    "json",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
